 - In 'omop2bff' conversion:
   - Added property "_visit" to 'interventionsOrProcedures' term
   - Added 'P' string to age (to conform with ISO8601) generated via condition_start_date + birth_datetime
   - Added DateTime::Format::ISO8601 module to simplify ome time-related calculations
 - Added "basic" 'bff2omop' conversion. To be further tested and improved in next releases

0.27 2025-01-16T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - DockerHub images now support Linux amd64 and arm64 (M-based Macs)

0.26 2024-12-18T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Fixed issue with excluded/negated boolean values in <pxf2bff>

0.25 2024-11-09T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Changed the default 'ontology_term' from {id => 'NCIT:NA0000', label => 'NA'} to {id => 'NCIT:C126101', label => 'Not Available'}
 - Expanded coverage for 'procedure' term in omop2bff*/bff2pxf
 - omop2bff now accepts measurements with empty values '\\N' and assigns defaults when needed

0.24 2024-07-18T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Switched read_csv from Text::CSV_XS functional interface to incremental reading to reduce RAM usage

0.23 2024-07-17T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Reduced RAM usage in -iomop -stream when loading mandatory tables from PostgreSQL dump

0.22 2024-07-13T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Reduced memory usage in -iomop -stream by emptying CONCEPT, PERSON and VISIT_OCCURRENCE during AoH -> HoH step 
 - Reduced memory usage in -iomop -no-stream by avoiding data duplication during transposition
 - Added Devel::Size to production for use with -verbose (+ added to cpanfile/Makefile.PL)
 - Implemented --max-lines-sql option to --stream mode

0.21 2024-06-01T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Updated the default value for the 'treatment.interval' object
 - Fixed a warning that occurred in exact searches when the string contained leading numbers