@@ -15,7 +15,7 @@ use Convert::Pheno;
 
 # Skip all tests if running on an ld architecture
 # mrueda 012025
-if ($Config{archname} =~ /-ld\b/) {
+if ( $Config{archname} =~ /-ld\b/ ) {
     plan skip_all => 'Skipping tests on ld architectures due to known issues';
     exit;
 }
